# DiffSynth-Studio

./: .gitignore  .msc  Diffsynth_Studio.py  ExVideo_animatediff_train.py  InternVL3_utils.py  LICENSE  PR_BIOCLIP.md  PR_LPIPS.md  README-zh.md  README.md  README_zh.md  SCRIPTS.md  SmolVLM_generator.py  VACE_Depth_Condition_Analysis.md  Wan2.1-VAP-14B.py  WanVideoPipeline_Analysis.md  accelerate_config.yaml  aggregate_metrics.py  analyze_vae_domain_gap.py  audit_vae_roundtrip.py  compute_variance_maps.py  convert_gray_video.py  download.py  download_models.py  downstream_stability.py  environment.yml  frame_vs_seed_variance.py  frametovideo.py  generate.py  inference_lora.py  inference_lora.sh  inspect_safetensors.py  linear_probing.py  metrics.py  prepare.py  prepare_dataset.py  pyproject.toml  readthedocs.yaml  requirements-amd.txt  requirements.txt  (+27 more)
.github/workflows/: publish.yaml
agent/: DECISIONS.md  EXPERIMENTS.md  FIGURES.md  HANDOFF.md  INDEX.md  LAST_PROMPT.md  PRESENTATION_STRATEGY.md  TEST_STATUS.md  THESIS_CONTEXT.md  TODO.md  git_diff.patch  git_status.txt  recent_commits.txt
agent/audits/: AUDIT_DPS_CONSISTENCY_2026-03-23.md  AUDIT_IMG2IMG_ABLATION.md  antigravity_spad_audit_report.md
agent/chat_exports/: conversation_export_full.md
agent/external_plans/: antigravity_brainstorm.md  antigravity_dps_consistency_review.md  antigravity_linear_probing_review.md  antigravity_thesis_analysis.md  (+1 more)
data_infer/: video_list.txt
dchen/: camera_adapter.py  camera_compute.py  camera_information.txt
diffsynth/: __init__.py  version.py
diffsynth.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: Overview.md  QA.md  README.md  VACE_GUIDANCE_REFERENCE_IMAGE_ONLY.md  action_conditioning_design.md  requirements.txt
docs/en/: Makefile  (+5 more)
examples/: Diffutoon.ipynb  Diffutoon_toon_shading.ipynb  multi_gpu_inference.py  sd_text_to_image.py  sd_toon_shading.py  sd_video_rerender.py  sdxl_text_to_image.py  sdxl_turbo.py
lora/: dataset.py  merger.py  retriever.py  test_merger.py  test_retriever.py  train_merger.py  train_retriever.py  utils.py
outputStyle/: video.json
pages/: 1_Image_Creator.py  2_Video_Creator.py
scripts/: data_process.py  test.py  train.py
tests/: test_ddim_scheduler.py
(+1973 files in other folders)
